[package]
name = "utouch_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
enclose = "1.2.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
tfc = "0.7.0"

[dependencies.rppal]
version = "0.22.1"
features = ["hal"]

[dependencies.uinput]
version = "0.1.3"
default-features = false
features = []
